--- a/package.json
+++ b/package.json
@@ -1,35 +1,50 @@
 {
-  "name": "radix-semantic-ui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "dependencies": {
-    "@radix-ui/react-dialog": "^1.0.2",
-    "@radix-ui/react-icons": "^1.1.1",
-    "@stitches/react": "^1.2.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.0-beta.12",
-    "@storybook/addon-interactions": "^7.0.0-beta.12",
-    "@storybook/addon-links": "^7.0.0-beta.12",
-    "@storybook/blocks": "^7.0.0-beta.12",
-    "@storybook/react": "^7.0.0-beta.12",
-    "@storybook/react-vite": "^7.0.0-beta.12",
-    "@storybook/testing-library": "^0.0.13",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "storybook": "^7.0.0-beta.12",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
-  }
+    "name": "radix-semantic-ui",
+    "private": true,
+    "version": "0.0.0",
+    "exports": {
+        ".": {
+            "import": "./dist/main.es.js",
+            "require": "./dist/main.cjs.js"
+        }
+    },
+    "main": "./dist/main.cjs.js",
+    "module": "./dist/main.es.js",
+    "typings": "./dist/main.d.ts",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
+    },
+    "dependencies": {
+        "@radix-ui/react-dialog": "^1.0.2",
+        "@radix-ui/react-icons": "^1.1.1"
+    },
+    "devDependencies": {
+        "@rollup/plugin-typescript": "^10.0.1",
+        "@storybook/addon-essentials": "^7.0.0-beta.12",
+        "@storybook/addon-interactions": "^7.0.0-beta.12",
+        "@storybook/addon-links": "^7.0.0-beta.12",
+        "@storybook/blocks": "^7.0.0-beta.12",
+        "@storybook/react": "^7.0.0-beta.12",
+        "@storybook/react-vite": "^7.0.0-beta.12",
+        "@storybook/testing-library": "^0.0.13",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
+        "@vitejs/plugin-react": "^3.0.0",
+        "storybook": "^7.0.0-beta.12",
+        "typescript": "^4.9.3",
+        "vite": "^4.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "peerDependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    }
 }
